--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+**/pnpm-debug.log*
+**/package-lock.json
+**/yarn.lock
+**/pnpm-lock.yaml
 
 # Logs
 **/logs/
@@ -40,7 +43,6 @@ Thumbs.db
 
 # Git
 .git/
-.gitignore
 
 # Temporary files
 *.tmp
@@ -67,3 +69,6 @@ Desktop.ini
 
 # Linux
 *~
+
+# umi
+**/.umi/
