--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/wangyi997042/wangyi-notes/issues"
   },
-  "homepage": "https://github.com/wangyi997042/wangyi-notes#readme",
+  "homepage": "https://github.com/wangyi997042/wangyi-notes#readme"
 }
