--- a/vue/v3/projects/vue3-learn/package.json
+++ b/vue/v3/projects/vue3-learn/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.6",
     "axios": "^0.20.0",
     "better-scroll": "^2.3.0",
     "core-js": "^3.6.5",
     "js-md5": "^0.7.3",
     "lib-flexible": "^0.3.2",
     "pushstate-server": "^3.1.0",
+    "qiankun": "^2.10.16",
     "vant": "^3.0.0-beta.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-beta.13",
