--- a/react/projects/react-project/package.json
+++ b/react/projects/react-project/package.json
@@ -17,6 +17,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
+    "wangyi-utils": "^2.2.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
