--- a/vue/v3/projects/vue3-learn/package.json
+++ b/vue/v3/projects/vue3-learn/package.json
@@ -14,11 +14,11 @@
     "better-scroll": "^2.5.1",
     "core-js": "^3.47.0",
     "js-md5": "^0.8.3",
+    "pinia": "^3.0.4",
     "pushstate-server": "^3.1.0",
     "vant": "^4.9.22",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.4",
-    "vuex": "^4.1.0"
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
